--- a/index.html
+++ b/index.html
@@ -1,10 +1,2 @@
-<h1> Welcome~ </h1>
-$url = 'http://api.fdci.se/cerpen';
-   $curl = curl_init($url);
-   curl_setopt($curl, CURLOPT_RETURNTRANSFER, true);
-   curl_setopt($curl, CURLOPT_HTTPHEADER, [
-    'Content-Type: application/json'
-   ]);
-   $response = curl_exec($curl);
-   curl_close($curl);
-   echo $response . PHP_EOL;
+<center><img border="0" alt="W3Schools" src="https://scontent.fdjb1-1.fna.fbcdn.net/v/t1.0-9/123139819_147333960461680_8770911324869933861_o.jpg?_nc_cat=105&ccb=2&_nc_sid=09cbfe&_nc_eui2=AeEmI7ChTnJjTAd2Z8pLv_zVpwpa0SgNn8OnClrRKA2fw9QRNoxGTyBAEks0SbphnafIx0stgFrzefjwdUNr4yfd&_nc_ohc=zcF7uABozMUAX_BqRwW&_nc_ht=scontent.fdjb1-1.fna&oh=db93f4e8c2cca9fc3f2a295fd6662af8&oe=5FC75E2D"><br/>
+   <h1> Welcome~ </h1></center>
