--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <center><img border="0" alt="MomoDev" src="https://scontent.fdjb1-1.fna.fbcdn.net/v/t1.0-9/123139819_147333960461680_8770911324869933861_o.jpg?_nc_cat=105&ccb=2&_nc_sid=09cbfe&_nc_eui2=AeEmI7ChTnJjTAd2Z8pLv_zVpwpa0SgNn8OnClrRKA2fw9QRNoxGTyBAEks0SbphnafIx0stgFrzefjwdUNr4yfd&_nc_ohc=zcF7uABozMUAX_BqRwW&_nc_ht=scontent.fdjb1-1.fna&oh=db93f4e8c2cca9fc3f2a295fd6662af8&oe=5FC75E2D" style="width:50px;height:50px;"><br/>
    <h1> Welcome~ </h1>
    <p>Contact Me at :</p>
-   <p> <a href="https://web.facebook.com/MomoDev-111865480675195"><img border="0" alt="fb" src="https://i.pinimg.com/originals/30/99/af/3099aff4115ee20f43e3cdad04f59c48.png"style="width:20px;height:20px;"/></a>
-    <a href="wa.me/6282279491995"><img border="0" alt="fb" src="https://png.pngtree.com/element_our/png/20181011/whatsapp-social-media-icon-design-template-vector-png_126998.jpg"style="width:20px;height:20px;"/></p>
+   <p> <a href="https://facebook.com/MomoDev-111865480675195"><img border="0" alt="fb" src="https://i.pinimg.com/originals/30/99/af/3099aff4115ee20f43e3cdad04f59c48.png"style="width:20px;height:20px;"/></a>
+    <a href="https://wa.me/6282279491995"><img border="0" alt="fb" src="https://seeklogo.com/images/W/whatsapp-icon-logo-BDC0A8063B-seeklogo.com.png"style="width:20px;height:20px;"/></p>
    </center>
    
